Set up let declarations properly by finding the correct JSStmtInfo (not missing try or catch blocks). This required making the 'scope' statements have a bit instead of a statement type since we can now morph e.g. try statements. This patch also fixes the numbering for let blocks after the first let block. bug 344370, r=brendan